Fixes issue 121 The layout of My Site Map is broken in Chrome
git-svn-id: https://infoscoop.googlecode.com/svn/trunk@177 d4e23b88-c782-11de-b6dc-25c59a28ecba

--- a/src/main/web/skin/mySiteMap.css
+++ b/src/main/web/skin/mySiteMap.css
@@ -96,6 +96,7 @@
 }
 .mySiteMap .tabWidgetListItem .widgetName {
 	cursor: pointer;
+	height: 16px;
 }
 
 .mySiteMap .menuItemIcon {
